W-13145685: Modularize mule-ee modules - kryo and batch